--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "browser-support.js",
   "scripts": {
     "prepare": "npm run copy",
-    "copy": "npm run copy:outdatedbrowser .",
-    "copy:outdatedbrowser": "copyfiles -f node_modules/outdatedbrowser/outdatedbrowser/*.min.*",
+    "copy": "npm run copy:dependency .",
+    "copy:dependency": "copyfiles -f node_modules/outdated-browser-rework/dist/*.js .",
     "release": "np"
   },
   "author": "Tom Coemans",
@@ -24,6 +24,6 @@
     "registry": "http://artifactory-pr-build.lb.cumuli.be:8081/artifactory/api/npm/acd-npm/"
   },
   "dependencies": {
-    "outdatedbrowser": "1.1.5"
+    "outdated-browser-rework": "2.5.3"
   }
 }
